EM-165: Fix presentation of 'Powered by Syscon' signature on mobile and desktop.

--- a/app/components/Footer/footer.scss
+++ b/app/components/Footer/footer.scss
@@ -33,11 +33,15 @@
   &:first-child {
     padding-left: 14px;
   }
+  &:hover {
+    text-decoration: underline;
+  }
 }
 
 .FooterSignature{
   clear: left;
   margin-top: 37px;
-  padding-left: 14px;
   padding-bottom: 10px;
+  font-size: 14px;
+  text-align: center;
 }
